  imcomplete file due to say power failures etc.  This is done by
  first writing to a temporary file, which is then renamed.  If the
  temporary file already exists, an exception is thrown.
o ROBUSTIFICATION: Now Arguments$getWritablePathname(path) validates 
  that there is enough file permissions so that a file can be created
  in the 'path' directory.


Version: 1.2.3 [2009-10-20]
o Added findSourceTraceback(), which finds the pathnames of all
  files currently being source():ed.


Version: 1.2.2 [2009-10-16]
o Some cleanup of Rd files to meet the stricter requirements.


Version: 1.2.1 [2009-10-03]
o Added createLink().
o Added createWindowsShortcut(). Currently it only works on Windows
  and version of Windows that runs VB scripts.


Version: 1.2.0 [2009-09-09]
o Fixed broken/missing Rd links.


Version: 1.1.9 [2009-06-29]
o Added argument 'useNames=FALSE' to getCharacters() of Arguments.
  For forgotten reasons, before (the default now) 'names' attributes
  were always dropped.  Now they can be kept, if wanted.
o Added dimNA<-().


Version: 1.1.8 [2009-06-07]
o BUG FIX: getParent(..., depth=0) gave an error, instead of returning
  the input path.


Version: 1.1.7 [2009-05-30]
o BUG FIX: Argument 'dThreshold' of less() for Verbose had to be named
  in order to be mapped.


Version: 1.1.6 [2009-05-19]
o UPDATE: Now getEnvironment(), getRegularExpression(), and 
  getReadablePathname() give clearer error messages if more the input
  contains more than one element.
o Now Arguments$getWritablePathname() better explains why a file cannot
  be opened for creation/modification due to wrong file permissions.


Version: 1.1.5 [2009-05-16]
o Changed argument 'asMode' for Arguments$getNumerics() to default to
  NULL instead of "numeric".  This will case the method to return integer
  if the input is integer, and double if the input is double.  The
  previous default was alway returning doubles, cf. notes on common 